src/MixinLanguage/Language/Compiler/Generated/MixinParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MixinParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Mixins.Compiler.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class MixinParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		ERROR_TOKEN=1, TERMINATOR=2, ESCAPE=3, BEGIN_ARGUMENT=4, BEGIN_VALUE=5, 
		BEGIN_VALUE_ESCAPED=6, BEGIN_CONTENT=7, BEGIN_VALUE_INTERPOLATE=8, BEGIN_VALUE_INLINE=9, 
		IDENTIFIER=10, NAMESPACE_IDENTIFIER=11, VALUE_END=12, ROOT_IDENTIFIER=13, 
		BEGIN_TABLE=14, BEGIN_TUPLE=15, ESCAPED_AT=16, ESCAPED_START=17, OUTER_WHITESPACE=18, 
		NEWLINE=19, COMMENT=20, SLASH_COMMENT=21, LC=22, RC=23, SEMICOLON=24, 
		COMMA=25, KEYWORD_FUNC=26, KEYWORD_DO=27, KEYWORD_EXPRESSION=28, KEYWORD_MIXIN=29, 
		KEYWORD_PRELUDE=30, KEYWORD_DERIVATION=31, KEYWORD_ELSE=32, KEYWORD_RETURN=33, 
		KEYWORD_GOTO=34, KEYWORD_BREAK=35, KEYWORD_CONTINUE=36, KEYWORD_TARGET=37, 
		KEYWORD_VAR=38, KEYWORD_LOCAL=39, KEYWORD_CARRY=40, KEYWORD_SIG=41, KEYWORD_WHEN=42, 
		KEYWORD_PURE=43, KEYWORD_INLINE=44, KEYWORD_NOINLINE=45, KEYWORD_STRICT=46, 
		LABEL_PREFIX=47, ASSIGN=48, ARROW=49, TOPLEVEL_VALUE_EXPRESSION=50, EMPTY_PARAMETERS=51, 
		BEGIN_PARAMETERS=52, ARGUMENT_TEXT=53, ARGUMENT_END=54, CONTENT_WRAP=55, 
		CONTENT_LINEBREAK=56, CONTENT_TEXT=57, VALUE_FUNCTION=58, VALUE_PREDICATE=59, 
		VALUE_MEMBER=60, VALUE_WRAP=61, VALUE_DELIMITER=62, END_PARAMETERS=63, 
		VALUE_END_INTERPOLATE=64, VALUE_END_INLINE=65, VALUE_SMART_ROOT=66, NOT_VALUE=67, 
		VALUE_CHECK=68, VALUE_ELVIS=69, VALUE_ASSIGN=70, VALUE_EXPAND=71, VALUE_WHITESPACE=72, 
		ESCAPE_MACRO=73, ESCAPE_LITERAL=74, ESCAPE_HEX=75, END_CONTENT_INTERPOLATE=76, 
		FUNCTION_IDENTIFIER=77, MEMBER_IDENTIFIER=78, LABEL_IDENTIFIER=79;
	public const int
		RULE_compilationUnit = 0, RULE_mixinDeclaration = 1, RULE_mixinBody = 2, 
		RULE_expressionDeclaration = 3, RULE_funcDeclaration = 4, RULE_functionMetadata = 5, 
		RULE_functionSignatureVariant = 6, RULE_signature = 7, RULE_tableSignature = 8, 
		RULE_tableSignatureEntry = 9, RULE_statementBlock = 10, RULE_statement = 11, 
		RULE_invocationStatement = 12, RULE_whenConditionStatement = 13, RULE_whenElseBranch = 14, 
		RULE_whenResult = 15, RULE_whenChainCondition = 16, RULE_whenChainStatement = 17, 
		RULE_whenChainBody = 18, RULE_whenChainBranch = 19, RULE_whenValueStatement = 20, 
		RULE_whenValueBody = 21, RULE_whenValueBranch = 22, RULE_whenValueCondition = 23, 
		RULE_assignmentStatement = 24, RULE_assignedValue = 25, RULE_controlflowStatement = 26, 
		RULE_contentBlock = 27, RULE_contentBody = 28, RULE_contentInterpolate = 29, 
		RULE_value = 30, RULE_valueExpression = 31, RULE_nonArgumentValue = 32, 
		RULE_primaryValue = 33, RULE_prefixOperators = 34, RULE_postfixOperators = 35, 
		RULE_valueStatement = 36, RULE_tailValue = 37, RULE_tupleValue = 38, RULE_tableValue = 39, 
		RULE_tableKeyedEntry = 40, RULE_valueList = 41, RULE_argumentValue = 42, 
		RULE_argumentBody = 43, RULE_inlineValue = 44, RULE_inlineTransformation = 45, 
		RULE_derivation = 46, RULE_derivationRoot = 47, RULE_elvisValue = 48, 
		RULE_transformationPart = 49, RULE_functionChainType = 50, RULE_labelIdentifier = 51, 
		RULE_memberIdentifier = 52, RULE_mixinIdentifier = 53, RULE_variableIdentifier = 54, 
		RULE_functionIdentifier = 55, RULE_expressionModifier = 56, RULE_mixinModifier = 57, 
		RULE_variableSpecifiers = 58, RULE_funcModifier = 59, RULE_trivia = 60, 
		RULE_comment = 61, RULE_escaped = 62;
	public static readonly string[] ruleNames = {
		"compilationUnit", "mixinDeclaration", "mixinBody", "expressionDeclaration", 
		"funcDeclaration", "functionMetadata", "functionSignatureVariant", "signature", 
		"tableSignature", "tableSignatureEntry", "statementBlock", "statement", 
		"invocationStatement", "whenConditionStatement", "whenElseBranch", "whenResult", 
		"whenChainCondition", "whenChainStatement", "whenChainBody", "whenChainBranch", 
		"whenValueStatement", "whenValueBody", "whenValueBranch", "whenValueCondition", 
		"assignmentStatement", "assignedValue", "controlflowStatement", "contentBlock", 
		"contentBody", "contentInterpolate", "value", "valueExpression", "nonArgumentValue", 
		"primaryValue", "prefixOperators", "postfixOperators", "valueStatement", 
		"tailValue", "tupleValue", "tableValue", "tableKeyedEntry", "valueList", 
		"argumentValue", "argumentBody", "inlineValue", "inlineTransformation", 
		"derivation", "derivationRoot", "elvisValue", "transformationPart", "functionChainType", 
		"labelIdentifier", "memberIdentifier", "mixinIdentifier", "variableIdentifier", 
		"functionIdentifier", "expressionModifier", "mixinModifier", "variableSpecifiers", 
		"funcModifier", "trivia", "comment", "escaped"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'@@'", "'\\'", null, null, null, null, "'{'", 
		null, null, null, "'func'", "'do'", "'expression'", "'mixin'", "'prelude'", 
		"'derivation'", "'else'", "'return'", "'goto'", "'break'", "'continue'", 
		"'target'", "'var'", "'local'", "'carry'", "'sig'", "'when'", "'pure'", 
		"'inline'", "'noinline'", "'strict'", null, null, "'->'", null, null, 
		"'('", null, "'>'", null, null, null, null, "':?'", "'#'", null, null, 
		"')'", null, "']'", "'$'", "'!'", "'?'", "'?:'", null, "'...'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ERROR_TOKEN", "TERMINATOR", "ESCAPE", "BEGIN_ARGUMENT", "BEGIN_VALUE", 
		"BEGIN_VALUE_ESCAPED", "BEGIN_CONTENT", "BEGIN_VALUE_INTERPOLATE", "BEGIN_VALUE_INLINE", 
		"IDENTIFIER", "NAMESPACE_IDENTIFIER", "VALUE_END", "ROOT_IDENTIFIER", 
		"BEGIN_TABLE", "BEGIN_TUPLE", "ESCAPED_AT", "ESCAPED_START", "OUTER_WHITESPACE", 
		"NEWLINE", "COMMENT", "SLASH_COMMENT", "LC", "RC", "SEMICOLON", "COMMA", 
		"KEYWORD_FUNC", "KEYWORD_DO", "KEYWORD_EXPRESSION", "KEYWORD_MIXIN", "KEYWORD_PRELUDE", 
		"KEYWORD_DERIVATION", "KEYWORD_ELSE", "KEYWORD_RETURN", "KEYWORD_GOTO", 
		"KEYWORD_BREAK", "KEYWORD_CONTINUE", "KEYWORD_TARGET", "KEYWORD_VAR", 
		"KEYWORD_LOCAL", "KEYWORD_CARRY", "KEYWORD_SIG", "KEYWORD_WHEN", "KEYWORD_PURE", 
		"KEYWORD_INLINE", "KEYWORD_NOINLINE", "KEYWORD_STRICT", "LABEL_PREFIX", 
		"ASSIGN", "ARROW", "TOPLEVEL_VALUE_EXPRESSION", "EMPTY_PARAMETERS", "BEGIN_PARAMETERS", 
		"ARGUMENT_TEXT", "ARGUMENT_END", "CONTENT_WRAP", "CONTENT_LINEBREAK", 
		"CONTENT_TEXT", "VALUE_FUNCTION", "VALUE_PREDICATE", "VALUE_MEMBER", "VALUE_WRAP", 
		"VALUE_DELIMITER", "END_PARAMETERS", "VALUE_END_INTERPOLATE", "VALUE_END_INLINE", 
		"VALUE_SMART_ROOT", "NOT_VALUE", "VALUE_CHECK", "VALUE_ELVIS", "VALUE_ASSIGN", 
		"VALUE_EXPAND", "VALUE_WHITESPACE", "ESCAPE_MACRO", "ESCAPE_LITERAL", 
		"ESCAPE_HEX", "END_CONTENT_INTERPOLATE", "FUNCTION_IDENTIFIER", "MEMBER_IDENTIFIER", 
		"LABEL_IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MixinParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MixinParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MixinParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MixinParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CompilationUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MixinParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TriviaContext[] trivia() {
			return GetRuleContexts<TriviaContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TriviaContext trivia(int i) {
			return GetRuleContext<TriviaContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MixinDeclarationContext[] mixinDeclaration() {
			return GetRuleContexts<MixinDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MixinDeclarationContext mixinDeclaration(int i) {
			return GetRuleContext<MixinDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclarationContext[] funcDeclaration() {
			return GetRuleContexts<FuncDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclarationContext funcDeclaration(int i) {
			return GetRuleContext<FuncDeclarationContext>(i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMixinParserVisitor<TResult> typedVisitor = visitor as IMixinParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 61575406288896L) != 0)) {
				{
				State = 129;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NEWLINE:
				case COMMENT:
				case SLASH_COMMENT:
					{
					State = 126;
					trivia();
					}
					break;
				case KEYWORD_MIXIN:
				case KEYWORD_DERIVATION:
					{
					State = 127;
					mixinDeclaration();
					}
					break;
				case KEYWORD_FUNC:
				case KEYWORD_PURE:
				case KEYWORD_INLINE:
				case KEYWORD_NOINLINE:
					{
					State = 128;
					funcDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 133;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 134;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MixinDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KEYWORD_MIXIN() { return GetToken(MixinParser.KEYWORD_MIXIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MixinIdentifierContext mixinIdentifier() {
			return GetRuleContext<MixinIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MixinBodyContext mixinBody() {
			return GetRuleContext<MixinBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MixinModifierContext[] mixinModifier() {
			return GetRuleContexts<MixinModifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MixinModifierContext mixinModifier(int i) {
			return GetRuleContext<MixinModifierContext>(i);
		}
		public MixinDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mixinDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMixinParserVisitor<TResult> typedVisitor = visitor as IMixinParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMixinDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MixinDeclarationContext mixinDeclaration() {
		MixinDeclarationContext _localctx = new MixinDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_mixinDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KEYWORD_DERIVATION) {
				{
				{
				State = 136;
				mixinModifier();
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 142;
			Match(KEYWORD_MIXIN);
			State = 143;
			mixinIdentifier();
			State = 144;
			mixinBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MixinBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LC() { return GetToken(MixinParser.LC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RC() { return GetToken(MixinParser.RC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionDeclarationContext[] expressionDeclaration() {
			return GetRuleContexts<ExpressionDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionDeclarationContext expressionDeclaration(int i) {
			return GetRuleContext<ExpressionDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclarationContext[] funcDeclaration() {
			return GetRuleContexts<FuncDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclarationContext funcDeclaration(int i) {
			return GetRuleContext<FuncDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TriviaContext[] trivia() {
			return GetRuleContexts<TriviaContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TriviaContext trivia(int i) {
			return GetRuleContext<TriviaContext>(i);
		}
		public MixinBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mixinBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMixinParserVisitor<TResult> typedVisitor = visitor as IMixinParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMixinBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MixinBodyContext mixinBody() {
		MixinBodyContext _localctx = new MixinBodyContext(Context, State);
		EnterRule(_localctx, 4, RULE_mixinBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146;
			Match(LC);
			State = 152;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 131942808289280L) != 0)) {
				{
				State = 150;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case KEYWORD_EXPRESSION:
				case KEYWORD_PRELUDE:
				case KEYWORD_STRICT:
					{
					State = 147;
					expressionDeclaration();
					}
					break;
				case KEYWORD_FUNC:
				case KEYWORD_PURE:
				case KEYWORD_INLINE:
				case KEYWORD_NOINLINE:
					{
					State = 148;
					funcDeclaration();
					}
					break;
				case NEWLINE:
				case COMMENT:
				case SLASH_COMMENT:
					{
					State = 149;
					trivia();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 154;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 155;
			Match(RC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KEYWORD_EXPRESSION() { return GetToken(MixinParser.KEYWORD_EXPRESSION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionModifierContext[] expressionModifier() {
			return GetRuleContexts<ExpressionModifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionModifierContext expressionModifier(int i) {
			return GetRuleContext<ExpressionModifierContext>(i);
		}
		public ExpressionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMixinParserVisitor<TResult> typedVisitor = visitor as IMixinParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionDeclarationContext expressionDeclaration() {
		ExpressionDeclarationContext _localctx = new ExpressionDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_expressionDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KEYWORD_PRELUDE || _la==KEYWORD_STRICT) {
				{
				{
				State = 157;
				expressionModifier();
				}
				}
				State = 162;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 163;
			Match(KEYWORD_EXPRESSION);
			State = 164;
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KEYWORD_FUNC() { return GetToken(MixinParser.KEYWORD_FUNC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(MixinParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunctionMetadataContext functionMetadata() {
			return GetRuleContext<FunctionMetadataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncModifierContext[] funcModifier() {
			return GetRuleContexts<FuncModifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncModifierContext funcModifier(int i) {
			return GetRuleContext<FuncModifierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KEYWORD_DO() { return GetToken(MixinParser.KEYWORD_DO, 0); }
		public FuncDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMixinParserVisitor<TResult> typedVisitor = visitor as IMixinParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDeclarationContext funcDeclaration() {
		FuncDeclarationContext _localctx = new FuncDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_funcDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 169;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 61572651155456L) != 0)) {
				{
				{
				State = 166;
				funcModifier();
				}
				}
				State = 171;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 172;
			Match(KEYWORD_FUNC);
			State = 173;
			Match(IDENTIFIER);
			State = 174;
			functionMetadata();
			State = 176;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==KEYWORD_DO) {
				{
				State = 175;
				Match(KEYWORD_DO);
				}
			}

			State = 178;
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionMetadataContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionSignatureVariantContext[] functionSignatureVariant() {
			return GetRuleContexts<FunctionSignatureVariantContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionSignatureVariantContext functionSignatureVariant(int i) {
			return GetRuleContext<FunctionSignatureVariantContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(MixinParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(MixinParser.NEWLINE, i);
		}
		public FunctionMetadataContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionMetadata; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMixinParserVisitor<TResult> typedVisitor = visitor as IMixinParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionMetadata(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionMetadataContext functionMetadata() {
		FunctionMetadataContext _localctx = new FunctionMetadataContext(Context, State);
		EnterRule(_localctx, 10, RULE_functionMetadata);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 184;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NEWLINE || _la==KEYWORD_SIG) {
				{
				State = 182;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case KEYWORD_SIG:
					{
					State = 180;
					functionSignatureVariant();
					}
					break;
				case NEWLINE:
					{
					State = 181;
					Match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 186;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
